--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -87,7 +87,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: #e6f9ec;
+  background-color: transparent ;
   background-image: url('/elixir2.png');
   background-repeat: no-repeat;
   background-position: bottom left;
