--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -87,7 +87,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  /*background-color: transparent ;*/
+  background-color: transparent ;
   background-image: url('/elixir2.jpg');
   background-repeat: no-repeat;
   background-position: bottom left;
