--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -90,8 +90,8 @@ body {
   background-color: transparent ;
   background-image: url('/elixir2.jpg');
   background-repeat: no-repeat;
-  background-position: bottom left;
-  background-size: 400px auto; 
+  background-position: center center;
+  background-size: cover; 
   background-attachment: fixed;
   /* background: linear-gradient(
       to bottom,
