--- a/app/components/chat/style.module.css
+++ b/app/components/chat/style.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   width: 16px;
   height: 16px;
-  background: #FFFFFF;
+  background: #dbc291;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 16px;
 }
